# winresz

./: Cargo.toml  LICENSE  README.md  install.nsi
.cargo/: config.toml
.github/workflows/: actionlint.yml  release.yml  review.yml
src/: main.rs  model.rs
