[package]
name = "winresz"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winsafe = { version = "0.0.26", features = ["user", "kernel"] }
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
codegen-units = 1
